--- a/contact.html
+++ b/contact.html
@@ -219,15 +219,16 @@
 								<h5>Address</h5>
 								<ul class="list-unstyled">
 									<i class="ft-map"></i>
-									<li>Botha Road</li>
-									<li>Buldana,Maharashtra</li>
+									<h6>Shriniwas Honda</h6>
+								<p>Gokul Nagar,Near Reliance Petrol Pump, Nanadura Road Khamgaon</p> 
+								<p>Buldana, Maharashtra</p></li>
 								</ul>
 							</div>
 							<div class="email">
 								<h5>Email</h5>
 								<ul class="list-unstyled">
 									<i class="ft-mail"></i>
-									<li>sales.Shriniwashonda@gmail.com</li>
+									<li>sales.shriniwashonda@gmail.com</li>
 								</ul>
 							</div>
 							<div class="phone">
@@ -235,7 +236,7 @@
 								<ul class="list-unstyled">
 									<i class="ft-phone-call"></i>
 									<li>9372788999</li>
-									<li>9422324157</li>
+								
 								</ul>
 							</div>
 						</div>
