--- a/finance.html
+++ b/finance.html
@@ -435,8 +435,7 @@
             </div>
 
             <div class="col-md-7 contact-form">
-
-			  <form name="finance_form" id="finance_form" action="#">
+				<form action="mailto:sales.shriniwashonda@gmail.com" method="post" enctype="text/plain">
               <div class="card-body">
 
                 <div class="row">
@@ -531,8 +530,10 @@
                   </div>
 
                   <div class="text-left col-md-12">
-                    <button type="button" class="btn btn-md btn-danger rounded-pill" onclick="sendFinanceQuery()">Submit</button>
-                  </div>
+					<input type="submit" value="Send" class="btn btn-md btn-danger rounded-pill"></button> </div>
+               
+				</div>
+                </div>
                 </div>
 
               </div>
