--- a/contact.html
+++ b/contact.html
@@ -242,7 +242,8 @@
 						</div>
 
             <div class="col-md-7 contact-form">
-			  <form action="" id="contactForm" method="post">
+				<form action="mailto:sales.shriniwashonda@gmail.com" method="post" enctype="text/plain">
+			  <!-- <form class="contactForm" action="contact.php" id="contactForm" method="post"> -->
               <div class="card-body">
                 <div class="row">
                   <div class="col-lg-12 col-md-12 col-sm-12 form-group icon-form">
@@ -291,61 +292,12 @@
 
 
                   <div class="text-left col-md-12">
-                    <button type="button" class="btn btn-md btn-danger rounded-pill" onclick="sendFeedback();">Submit</button>
-                  </div>
+
+					<input type="submit" value="Send" class="btn btn-md btn-danger rounded-pill"></button> </div>
                 </div>
               </div>
 			  </form>
             </div>
-
-
-
-
-
-						<!-- <div class="col-md-7 contact-form">
-							<div class="card">
-								<div class="card-body">
-									<form id="contactForm">
-										<div class="form-row">
-											<div class="form-group col-md-6">
-												<input id="name" name="name" placeholder="Full Name"
-													class="form-control" type="text" minlength="10">
-											</div>
-											<div class="form-group col-md-6">
-												<input type="email" class="form-control" id="email" name="email" placeholder="Email" required>
-											</div>
-										</div>
-										<div class="form-row">
-											<div class="form-group col-md-6">
-												<input id="phone" name="phone" minlength="10"
-													placeholder="Mobile No." class="form-control"
-													required="required" type="text" required>
-											</div>
-											<div class="form-group col-md-6">
-
-												<select id="type" name="type" class="form-control">
-													<option value="" selected>Choose ...</option>
-													<option value="New Buyer">New Buyer</option>
-													<option value="Service Request">Service Request</option>
-													<option value="Complaint">Complaint</option>
-													<option value="Feedback">Feedback</option>
-												</select>
-											</div>
-											<div class="form-group col-md-12">
-												<textarea id="message" name="message" cols="40" rows="5"
-													placeholder="Your Message" class="form-control" required></textarea>
-											</div>
-										</div>
-
-										<div class="form-row">
-											<button type="button" id="action_btn"
-												class="btn btn-md btn-danger rounded-pill"
-												onclick="sendFeedback();">Submit</button>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div> -->
 
 
 
@@ -359,75 +311,6 @@
 	</section>
 	<!-- Content Section  Product Type Display -->
 	<div id="loader"></div>
-
-	<script type="text/javascript">
-		var pageName = "contact";
-
-		function sendFeedback() {
-			
-			$("#contactForm").validate({rules:{name: {required: true, minlength: 5},
-					email: {required: true},
-					type: {required: true},
-					phone: {required: true, minlength: 10},
-					message : {required: true}
-				},
-				messages: {
-					name: "Please enter name",
-					email: "Please enter a valid email id",
-					type: "Please choose one of the category above",
-					phone: "Please enter a valid phone number",
-					message : "Please enter message"
-				},
-				errorPlacement : function(error, element) {
-					  var placement = $("#"+element.attr("name")+"-error");
-				      if (placement) {
-				        $(placement).text(error.text());
-				      } else {
-				        error.insertAfter(element);
-				      }
-				},
-				onfocusout: function(element) { $(element).valid(); }
-			});
-			
-			if(!$("#contactForm").valid()){
-				return false;
-			}
-			var spinner = $('#loader');
-			spinner.show();
-			var data = getFormData();
-			console.log(data);
-			// send ajax
-			$.ajax({
-				url : 'send_feedback', // url where to submit the request
-				type : "POST", // type of action POST || GET
-				dataType : 'json', // data type
-				data : data, // post data || get data
-				success : function(result) {
-					// you can see the result from the console
-					// tab of the developer tools
-					console.log(result);
-					spinner.hide();
-					$("#success-modal").modal("show");
-				},
-				error : function(xhr, resp, text) {
-					console.log(xhr, resp, text);
-					spinner.hide();
-					$("#reject-modal").modal("show");
-				}
-			});
-		}
-
-		function getFormData() {
-			var unindexed_array = $("#contactForm").serializeArray();
-			var indexed_array = {};
-
-			$.map(unindexed_array, function(n, i) {
-				indexed_array[n['name']] = n['value'];
-			});
-
-			return indexed_array;
-		}
-	</script>
 
 
 
@@ -501,6 +384,7 @@
 					<div class="col-lg-6 col-md-6 mr-auto">
 						&copy; Shriniwashonda All Rights Reserved.
 						2020.
+						
 					</div>
 					<div class="col-lg-6 col-md-6 mr-auto">
 						<ul class="foot-link">
