--- a/extended_warranty.html
+++ b/extended_warranty.html
@@ -295,7 +295,7 @@
 
 
             <div class="col-lg-6 col-md-12  col-sm-12">
-            <form id="ew_form" name="ew_form" action="#">
+            	<form action="mailto:services.shriniwashonda@gmail.com" method="post" enctype="text/plain">
               <div class="location-txt networks">
                 <div class="enquiry-block">
                   <h5 class="heading mb-4">Enquire Now</h5>
@@ -343,7 +343,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 form-group icon-form">
                       <label class="label">Year Of Purchase</label>
                       <i class="ft-calendar"></i>
-                      <input type="text" class="form-control transparent-tb" placeholder="Year Of Purchase" id="year_purchased" name="year_purchased">
+                      <input type="date" class="form-control transparent-tb" placeholder="Year Of Purchase" id="year_purchased" name="year_purchased">
                       <small class="form-text text-danger error"></small>
                     </div>
 
@@ -386,7 +386,7 @@
 
 
                     <div class="text-left col-md-12">
-                      <button type="button" class="btn btn-md btn-danger rounded-pill" onclick="sendEWQuery()">Submit</button>
+						<input type="submit" value="Send" class="btn btn-md btn-danger rounded-pill"></button> 
                     </div>
                   </div>
                 </div>
