--- a/service_booking.html
+++ b/service_booking.html
@@ -273,7 +273,7 @@
 
 
             <div class="col-lg-6 col-md-12  col-sm-12">
-              <form name="srForm" id="srForm" action="#">
+				<form action="mailto:services.shriniwashonda@gmail.com" method="post" enctype="text/plain">
               <div class="location-txt networks">
                 <div class="enquiry-block">
                   <h5 class="heading mb-4">SERVICE BOOKING</h5>
@@ -330,7 +330,7 @@
                     <div class="col-lg-6 col-md-12 col-sm-12 form-group icon-form">
                       <label class="label">Year Of Purchase</label>
                       <i class="ft-calendar"></i>
-                      <input type="text" class="form-control transparent-tb" placeholder="Year Of Purchase" id="year_purchased" name="year_purchased">
+                      <input type="date" class="form-control transparent-tb" placeholder="Year Of Purchase" id="year_purchased" name="year_purchased">
                       <small class="form-text text-danger error"></small>
                     </div>
 
@@ -392,7 +392,7 @@
 
 
                     <div class="text-left col-md-12">
-                      <button type="button" class="btn btn-md btn-danger rounded-pill" onclick="bookServiceRequest()">Submit</button>
+						<input type="submit" value="Send" class="btn btn-md btn-danger rounded-pill"></button> 
                     </div>
                   </div>
                 </div>
