--- a/about.html
+++ b/about.html
@@ -117,8 +117,8 @@
 					<div class="col-md-8 mr-auto ">
 						<ul class="topbar-left text-left">
 							<li><i class="ft-phone-call"></i><strong>9372788999</strong></li>
-							<li><i class="ft-phone-call"></i><strong>9422324157</strong></li>
-							<li><i class="ft-mail"></i><strong>sales.Shriniwashonda@gmail.com</strong></li>
+								<li><i class="ft-mail"></i><strong>sales.shriniwashonda@gmail.com</strong></li>
+								<li><i class="ft-mail"></i><strong>services.shriniwashonda@gmail.com</strong></li>
 						</ul>
 					</div>
 
@@ -188,7 +188,7 @@
 						</div>
 						<ul class="navbar-nav mr-auto main-menu">
 
-							<li id="home" class="nav-item active"><a class="nav-link" href="about.html">Home</a></li>
+							<li id="home" class="nav-item active"><a class="nav-link" href="index.htm">Home</a></li>
 
 							<li id="models" class="nav-item"><a class="nav-link" href="models.html">Models</a></li>
 
