--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
 						</div>
 						<ul class="navbar-nav mr-auto main-menu">
 
-							<li id="home" class="nav-item active"><a class="nav-link" href="contact.html">Home</a></li>
+							<li id="home" class="nav-item active"><a class="nav-link" href="index.htm">Home</a></li>
 
 							<li id="models" class="nav-item"><a class="nav-link" href="models.html">Models</a></li>
 
@@ -243,13 +243,12 @@
 
             <div class="col-md-7 contact-form">
 				<form action="mailto:sales.shriniwashonda@gmail.com" method="post" enctype="text/plain">
-			  <!-- <form class="contactForm" action="contact.php" id="contactForm" method="post"> -->
               <div class="card-body">
                 <div class="row">
                   <div class="col-lg-12 col-md-12 col-sm-12 form-group icon-form">
                     <label class="label">Your Name</label>
                     <i class="ft-user"></i>
-                    <input type="text" class="form-control transparent-tb" placeholder="Your Name" id="name" name="name">
+                    <input type="text" class="form-control transparent-tb" placeholder="Your Name" id="name" name="name" required>
                     <small class="form-text text-danger" id="name-error"></small>
                   </div>
 
@@ -263,7 +262,7 @@
                   <div class="col-lg-6 col-md-12 col-sm-12 form-group icon-form">
                     <label class="label">Contact Number</label>
                     <i class="ft-phone-call"></i>
-                    <input type="text" class="form-control transparent-tb" placeholder="Contact Number" id="phone" name="phone">
+                    <input type="text" class="form-control transparent-tb" placeholder="Contact Number" id="phone" name="phone" required>
                     <small class="form-text text-danger" id="phone-error"></small>
                   </div>
 
@@ -273,7 +272,7 @@
                   <div class="col-lg-6 col-md-12 col-sm-12 form-group icon-form">
                     <label class="label">Reason</label>
                     <i class="ft-help-circle"></i>
-                    <select id="inputState" class="form-control transparent-tb" id="type" name="type">
+                    <select id="inputState" class="form-control transparent-tb" id="type" name="type" required>
                       <option value="Not Provided">Choose ...</option>
                       <option value="complaint">Complaint</option>
                       <option value="feedback">Feedback</option>
@@ -292,8 +291,7 @@
 
 
                   <div class="text-left col-md-12">
-
-					<input type="submit" value="Send" class="btn btn-md btn-danger rounded-pill"></button> </div>
+                    <input type="submit" value="Send" class="btn btn-md btn-danger rounded-pill"></button> </div>    </div>
                 </div>
               </div>
 			  </form>
