--- a/extended_warranty.html
+++ b/extended_warranty.html
@@ -155,7 +155,7 @@
 						</div>
 						<ul class="navbar-nav mr-auto main-menu">
 
-							<li id="home" class="nav-item active"><a class="nav-link" href="extended_warranty.html">Home</a></li>
+							<li id="home" class="nav-item active"><a class="nav-link" href="index.htm">Home</a></li>
 
 							<li id="models" class="nav-item"><a class="nav-link" href="models.html">Models</a></li>
 
@@ -295,7 +295,7 @@
 
 
             <div class="col-lg-6 col-md-12  col-sm-12">
-            	<form action="mailto:services.shriniwashonda@gmail.com" method="post" enctype="text/plain">
+				<form action="mailto:sales.shriniwashonda@gmail.com" method="post" enctype="text/plain">
               <div class="location-txt networks">
                 <div class="enquiry-block">
                   <h5 class="heading mb-4">Enquire Now</h5>
@@ -343,14 +343,14 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 form-group icon-form">
                       <label class="label">Year Of Purchase</label>
                       <i class="ft-calendar"></i>
-                      <input type="date" class="form-control transparent-tb" placeholder="Year Of Purchase" id="year_purchased" name="year_purchased">
+					  <input type="text" class="form-control transparent-tb" placeholder="Year Of Purchase" id="year_purchased" name="year_purchased" required>
                       <small class="form-text text-danger error"></small>
                     </div>
 
                     <div class="col-lg-12 col-md-12 col-sm-12 form-group icon-form">
                       <label class="label">Registration Number</label>
                       <i class="fa fa-motorcycle"></i>
-                      <input type="text" class="form-control transparent-tb" placeholder="Registration Number" id="reg_number" name="reg_number">
+                      <input type="text" class="form-control transparent-tb" placeholder="Registration Number" id="reg_number" name="reg_number" required>
                       <small class="form-text text-danger error"></small>
                     </div>
 
@@ -359,7 +359,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 form-group icon-form">
                       <label class="label">Your Name</label>
                       <i class="ft-user"></i>
-                      <input type="text" class="form-control transparent-tb" placeholder="Your Name" id="name" name="name">
+                      <input type="text" class="form-control transparent-tb" placeholder="Your Name" id="name" name="name" required>
                       <small class="form-text text-danger" id="name-error"></small>
                     </div>
 
@@ -373,7 +373,7 @@
                     <div class="col-lg-12col-md-12 col-sm-12 form-group icon-form">
                       <label class="label">Contact Number</label>
                       <i class="ft-phone-call"></i>
-                      <input type="text" class="form-control transparent-tb" placeholder="Contact Number" id="phone" name="phone">
+                      <input type="text" class="form-control transparent-tb" placeholder="Contact Number" id="phone" name="phone" required>
                       <small class="form-text text-danger" id="phone-error"></small>
                     </div>
 
@@ -386,7 +386,7 @@
 
 
                     <div class="text-left col-md-12">
-						<input type="submit" value="Send" class="btn btn-md btn-danger rounded-pill"></button> 
+						<input type="submit" value="Send" class="btn btn-md btn-danger rounded-pill"></button>
                     </div>
                   </div>
                 </div>
