--- a/model-7.html
+++ b/model-7.html
@@ -165,7 +165,7 @@
 						</div>
 						<ul class="navbar-nav mr-auto main-menu">
 
-							<li id="home" class="nav-item active"><a class="nav-link" href="model-7.html">Home</a></li>
+							<li id="home" class="nav-item active"><a class="nav-link" href="index.htm">Home</a></li>
 
 							<li id="models" class="nav-item"><a class="nav-link" href="models.html">Models</a></li>
 
