--- a/offers.html
+++ b/offers.html
@@ -178,7 +178,7 @@
 						</div>
 						<ul class="navbar-nav mr-auto main-menu">
 
-							<li id="home" class="nav-item active"><a class="nav-link" href="offers.html">Home</a></li>
+							<li id="home" class="nav-item active"><a class="nav-link" href="index.htm">Home</a></li>
 
 							<li id="models" class="nav-item"><a class="nav-link" href="models.html">Models</a></li>
 
@@ -265,12 +265,12 @@
 						
 						
 						<div class="col-md-6 contact-form">
-							<form name="offerForm" id="offerForm" action="#">
+							<form action="mailto:sales.shriniwashonda@gmail.com" method="post" enctype="text/plain">
 								<div class="card-body">
 									<div class="row">
 										<div class="col-lg-12 col-md-12 col-sm-12 form-group icon-form">
 											<label class="label">Your Name</label> <i class="ft-user"></i>
-											<input type="text" class="form-control transparent-tb" placeholder="Your Name" id="name" name="name"> <small class="form-text text-danger" id="name-error"></small>
+											<input type="text" class="form-control transparent-tb" placeholder="Your Name" id="name" name="name" required> <small class="form-text text-danger" id="name-error"></small>
 										</div>
 
 										<div class="col-lg-12 col-md-12 col-sm-12 form-group icon-form">
@@ -280,13 +280,13 @@
 										</div>
 
 										<div class="col-lg-12 col-md-12 col-sm-12 form-group icon-form">
-											<label class="label">Contact Number</label> <i class="ft-phone-call"></i> <input type="text" class="form-control transparent-tb" placeholder="Contact Number" id="phone" name="phone">
+											<label class="label">Contact Number</label> <i class="ft-phone-call"></i> <input type="text" class="form-control transparent-tb" placeholder="Contact Number" id="phone" name="phone" required>
 											<small class="form-text text-danger" id="phone-error"></small>
 										</div>
 										<div class="col-lg-12">
 											<div class="form-group">
 												<div class="form-check">
-													<input class="form-check-input" type="checkbox" id="is_accept" name="is_accept"> <label class="form-check-label" for="gridCheck"> Yes, I
+													<input class="form-check-input" type="checkbox" id="is_accept" name="is_accept" required> <label class="form-check-label" for="gridCheck"> Yes, I
 														agree with all <a href="#" target="_blank" class="text-danger">Terms &amp; Conditions</a>
 													</label>
 												</div>
@@ -294,7 +294,7 @@
 											</div>
 										</div>
 										<div class="text-left col-md-12">
-											<button type="button" class="btn btn-md btn-danger rounded-pill" onclick="subscribeOffer()">Submit</button>
+											<input type="submit" value="Send" class="btn btn-md btn-danger rounded-pill"></button>
 										</div>
 									</div>
 								</div>
