--- a/product_enquiry-9.html
+++ b/product_enquiry-9.html
@@ -170,7 +170,7 @@
 						</div>
 						<ul class="navbar-nav mr-auto main-menu">
 
-							<li id="home" class="nav-item active"><a class="nav-link" href="product_enquiry-9.html">Home</a></li>
+							<li id="home" class="nav-item active"><a class="nav-link" href="index.htm">Home</a></li>
 
 							<li id="models" class="nav-item"><a class="nav-link" href="models.html">Models</a></li>
 
