--- a/index.htm
+++ b/index.htm
@@ -1826,8 +1826,8 @@ hr {
 									<ul>
 										<li><i class="ft-map"></i>
 											<h4>Showroom</h4>
-											<p>Botha Road,Buldana,
-												Maharashtra</p></li>
+											<p>Gokul Nagar,Near Reliance Petrol Pump, Nanadura Road Khamgaon</p> 
+								<p>Buldana, Maharashtra</p></li>
 
 										<li><i class="small ft-phone-call"></i>
 											<h6>9372788999</h6></li>
@@ -1844,11 +1844,11 @@ hr {
 									<ul>
 										<li><i class="ft-map"></i>
 											<h4>Service Center</h4>
-											<p>Botha Road,Buldana,
-												Maharashtra</p></li>
+											<p>Gokul Nagar,Near Reliance Petrol Pump, Nanadura Road Khamgaon</p> 
+								<p>Buldana, Maharashtra</p></li>
 
 										<li><i class="small ft-phone-call"></i>
-											<h6>9665786969</h6></li>
+											<h6>93727889999</h6></li>
 
 										<li><i class="small ft-grid"></i>
 											<h6>Opens @ 9.30 AM</h6></li>
